{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 90,
  "lineage": "59c384db-cea5-88a6-09fa-8ace0785eae0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "cloudmart_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a4640f53fa171eb4",
            "arn": "arn:aws:ec2:eu-north-1:407676142570:instance/i-0b21c2298cfa742b4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "cloudmart-ec2-ecr-profile",
            "id": "i-0b21c2298cfa742b4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "cloudmart-final-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04c4fd5068c0aeb44",
            "private_dns": "ip-10-0-1-49.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.49",
            "public_dns": "ec2-13-51-238-143.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.51.238.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a4d752fa50c77984",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f4fcf1c0ca925e74",
            "tags": {
              "Name": "cloudmart-web-server"
            },
            "tags_all": {
              "Name": "cloudmart-web-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eddb55fa7fab6625"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_ecr_profile",
            "aws_iam_role.ec2_ecr_role",
            "aws_security_group.web_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.cloudmart_vpc",
            "data.aws_ami.ubuntu_latest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:407676142570:internet-gateway/igw-089da6ca669a7fd1c",
            "id": "igw-089da6ca669a7fd1c",
            "owner_id": "407676142570",
            "tags": {
              "Name": "cloudmart-igw"
            },
            "tags_all": {
              "Name": "cloudmart-igw"
            },
            "vpc_id": "vpc-0b015efd099e7b923"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloudmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:407676142570:route-table/rtb-0582c3389ac262fd0",
            "id": "rtb-0582c3389ac262fd0",
            "owner_id": "407676142570",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-089da6ca669a7fd1c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudmart-public-rt"
            },
            "tags_all": {
              "Name": "cloudmart-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b015efd099e7b923"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_vpc.cloudmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e37873b7d9eb60e",
            "route_table_id": "rtb-0582c3389ac262fd0",
            "subnet_id": "subnet-0f4fcf1c0ca925e74"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.cloudmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:407676142570:security-group/sg-0a98d9188837cc035",
            "description": "Allow traffic from EC2 to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a98d9188837cc035",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0eddb55fa7fab6625"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "cloudmart-rds-sg",
            "name_prefix": "",
            "owner_id": "407676142570",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b015efd099e7b923"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_vpc.cloudmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:407676142570:security-group/sg-0eddb55fa7fab6625",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eddb55fa7fab6625",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 5001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cloudmart-web-sg",
            "name_prefix": "",
            "owner_id": "407676142570",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b015efd099e7b923"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloudmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:407676142570:subnet/subnet-09cba020671737e99",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09cba020671737e99",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "407676142570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudmart-private-subnet"
            },
            "tags_all": {
              "Name": "cloudmart-private-subnet"
            },
            "vpc_id": "vpc-0b015efd099e7b923"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloudmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:407676142570:subnet/subnet-0884b574588cafb3f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0884b574588cafb3f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "407676142570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudmart-private-subnet-2"
            },
            "tags_all": {
              "Name": "cloudmart-private-subnet-2"
            },
            "vpc_id": "vpc-0b015efd099e7b923"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloudmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:407676142570:subnet/subnet-0f4fcf1c0ca925e74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4fcf1c0ca925e74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "407676142570",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudmart-public-subnet"
            },
            "tags_all": {
              "Name": "cloudmart-public-subnet"
            },
            "vpc_id": "vpc-0b015efd099e7b923"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.cloudmart_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cloudmart_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:407676142570:vpc/vpc-0b015efd099e7b923",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ed63271b384d3da2",
            "default_route_table_id": "rtb-04fd34b67720ede2c",
            "default_security_group_id": "sg-0b7088c87e919ff27",
            "dhcp_options_id": "dopt-0e566e792bf6d137d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b015efd099e7b923",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04fd34b67720ede2c",
            "owner_id": "407676142570",
            "tags": {
              "Name": "cloudmart-vpc"
            },
            "tags_all": {
              "Name": "cloudmart-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}